--- a/Library_Management_System/templates/withlogin.html
+++ b/Library_Management_System/templates/withlogin.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" href="{{ url_for('static',filename='user.png')}}">
 </head>
 <title>{% block title %}{% endblock %}</title>
 
