--- a/Library_Management_System/templates/admin_dashboard.html
+++ b/Library_Management_System/templates/admin_dashboard.html
@@ -1,5 +1,13 @@
 {% extends 'admin_layout.html' %}
 {% block title %}Admin Dashboard{% endblock %}
+{% block nav %}
+<div class="input-group mb-3" style="width: 300px;">
+    <div class="input-group-prepend" >
+        <span class="input-group-text"><i class="fa fa-search"></i></span>
+    </div>
+    <input type="search" class="form-control" placeholder="Search books" id="search" autofocus>
+</div>
+{% endblock %}
 {% block content %}
 
 {% for message in get_flashed_messages() %}
@@ -13,10 +21,10 @@
 {% endfor %}
 {% if books %}
 
-<div class='text-center container-fluid'>
+<div class='text-center table-responsive'>
 
      <h1 class='display-4 text-center'>All Books</h1><br>
-     <table class="table table-dark table-bordered">
+     <table class="table table-dark table-bordered" id='data'>
           <thead>
                <th scope="col">#</th>
                <th scope="col">Name</th>
@@ -25,6 +33,7 @@
                <th scope="col">Total Copies</th>
                <th class="col">Copies Available</th>
                <th class="col">Copies Issued</th>
+               <th class="col">Details</th>
           </thead>
           <tbody>
                {% for book in books %}
