--- a/Library_Management_System/templates/withlogin.html
+++ b/Library_Management_System/templates/withlogin.html
@@ -24,10 +24,10 @@
             </ul>
             <ul class='nav navbar-nav ml-auto'>
                 <li class='nav-item active ml-4'>
-                    <a class='nav-link' href='/new/return'>Return Book</a>
+                    <a class='nav-link' href='/return/book'>Return Book</a>
                 </li>
                 <li class='nav-item active ml-4'>
-                    <a class='nav-link' href='/new/issue'>Issue Book</a>
+                    <a class='nav-link' href='/issue/book'>Issue Book</a>
                 </li>
                 <li class='nav-item active ml-4'>
                     <a class='nav-link' href='/logout'>Logout</a>
