--- a/Library_Management_System/templates/admin_layout.html
+++ b/Library_Management_System/templates/admin_layout.html
@@ -43,7 +43,7 @@
           {% block content %}{% endblock %}
           <hr style="border: 5px solid white;border-radius: 5px;" />
           <footer>
-               <p>&copy; {{ year }} - Library Management System</p>
+               <p>&copy; {{ year }} - Library Management System - Kumar Aditya</p>
           </footer>
      </div>
 
