--- a/Library_Management_System/templates/admin_layout.html
+++ b/Library_Management_System/templates/admin_layout.html
@@ -22,7 +22,7 @@
           <div class='container-fluid' id='navbarNav'>
                <ul class='nav navbar-nav navbar-brand'>
                     <li class='nav-item'>
-                         <a class='navbar-brand' href='/admin'>Admin</a>
+                         <a class='navbar-brand' href='/admin/dashboard'>Admin</a>
                     </li>
                </ul>
                <ul class='nav navbar-nav ml-auto'>
